[workspace]
members = ["macros"]

[package]
name = "clickhouse-client"
version = "0.15.0"
edition = "2021"
description = "Client for Clickhouse DB"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nlargueze/clickhouse-client"

[features]
default = ["time", "uuid"]
time = ["dep:time"]
uuid = ["dep:uuid"]

[dependencies]
clickhouse-client-macros = { version = "0.15.0", path = "./macros" }
async-trait = "0.1.68"
hyper = { version = "0.14.26", features = ["client", "http1"] }
hyper-rustls = "0.24.0"
thiserror = "1.0.40"
time = { version = "0.3.20", optional = true, features = [
    "formatting",
    "macros",
    "parsing",
] }
tracing = "0.1.37"
uuid = { version = "1.3.3", optional = true, features = ["v4"] }
phf = { version = "0.11.1", features = ["macros"] }
leb128 = "0.2.5"
serde = { version = "1.0.163", features = ["derive"] }
regex = "1.8.1"
once_cell = "1.17.1"

[dev-dependencies]
tokio = { version = "1.28.0", features = ["full"] }
tracing-ext = "0.3.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
time = { version = "0.3.20", features = [
    "formatting",
    "macros",
    "parsing",
    "serde",
] }
assert_hex = "0.2.2"
