[workspace]
members = ["macros"]

[package]
name = "clickhouse-client"
version = "0.16.0"
edition = "2021"
description = "Client for Clickhouse DB"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nlargueze/clickhouse-client"

[features]

[dependencies]
clickhouse-client-macros = { version = "0.16.0", path = "./macros" }
async-trait = "0.1.73"
hyper = { version = "0.14.27", features = ["client", "http1"] }
hyper-rustls = "0.24.1"
thiserror = "1.0.47"
time = { version = "0.3.27", features = ["formatting", "macros", "parsing"] }
tracing = "0.1.37"
uuid = { version = "1.4.1", features = ["v4"] }
leb128 = "0.2.5"
urlencoding = "2.1.3"
ethnum = "1.3.2"
impl-trait-for-tuples = "0.2.2"
prettytable-rs = "0.10.0"

[dev-dependencies]
uuid = { version = "1.4.1", features = ["v4"] }
time = { version = "0.3.27", features = ["formatting", "macros", "parsing"] }
assert_hex = "0.2.2"
tokio = { version = "1.28.0", features = ["full"] }
tracing-ext = "0.3.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
