[package]
name = "clickhouse-client-macros"
version = "0.11.0"
edition = "2021"
description = "Macros for crate clickhouse-client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nlargueze/clickhouse-client"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
syn = { version = "2.0.15", features = ["full"] }
quote = "1.0.26"
proc-macro-error = "1.0.4"
